# Lego-Arbitrage

./: .env.prod.example  .gitignore  LEGO-Arbitrage-Masterplan.html  Project_knowledge.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py  runtime_settings.py
backend/app/api/routes/: analysis.py  auctions.py  auth.py  feedback.py  inventory.py  scout.py  sets.py  settings.py  watchlist.py
backend/app/engine/: __init__.py  auction_calculator.py  decision_engine.py  market_consensus.py  risk_scorer.py  roi_calculator.py
backend/app/models/: __init__.py  analysis_history.py  auction_watch.py  base.py  feedback.py  inventory.py  inventory_photo.py  offer.py  price.py  set.py  settings.py
backend/app/notifications/: telegram_bot.py
backend/app/scrapers/: __init__.py  amazon.py  base.py  brickeconomy.py  brickmerge.py  ebay_sold.py  idealo.py  kleinanzeigen.py  lego_com.py
backend/app/services/: auction_watch.py  bricklink.py  catawiki.py  whatnot.py
backend/app/tasks/: analyze_new.py  auction_watch.py  catawiki_scan.py  celery_app.py  scrape_daily.py  update_inventory.py
backend/tests/: test_analysis_multi.py  test_auction_calculator.py  test_auction_watch_service.py  test_catawiki_service.py  test_inventory_market_snapshot.py  test_marketplace_services.py
docs/: deploy.md  infrastructure.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
infra/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  nginx.conf
(+26 files in other folders)
