[project]
name = "lego-arbitrage"
version = "0.1.0"
description = "Autonomous LEGO Investment & Arbitrage System for the German market"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis & Task Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # Scraping
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    # ML (Phase 3 - optional)
    "scikit-learn>=1.6.0",
    # Notifications
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    # AI Agent (Phase 3 - keys required)
    "anthropic>=0.40.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "fake-useragent>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx",  # for TestClient
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
